# fish-risk

./: .gitignore  README.md  constrain_policy.py  main.py  plot.py  pyproject.toml
configs/: .gitignore  const-exp.yaml  constant-policy.yaml  constrain-policy.yaml  evolve-preference.yaml
configs/profitmax/: small.yaml
notebooks/: Fish_SimApril27.ipynb  Fish_Sim_May2.ipynb  main.ipynb
results/: .gitignore  config.yaml
results/freezer/risk-projection-sig/: config.yaml  projection_results.nc
scripts/: basic.py  constrain_policy.py  evolve_preference.py  plot.py  risk_projection.py
src/: constrain_policy.py  main.py
src/sim/: models.py  plotting.py  utils.py
